--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
-<footer style="background-color: #333; color: white; padding: 1rem; text-align: center;">
-    <p>&copy; 2024 LearnHub. All rights reserved.</p>
-    <ul style="list-style-type: none; margin: 0; padding: 0;">
-        <li style="display: inline; margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Privacy Policy</a></li>
-        <li style="display: inline; margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Terms of Use</a></li>
-    </ul>
+<footer>
+	<p>&copy; 2024 LearnHub. All rights reserved.</p>
+	<ul class="policy-container">
+		<li class="policy-item"><a href="#" class="policy-text">Privacy Policy</a></li>
+		<li class="policy-item"><a href="#" class="policy-text">Terms of Use</a></li>
+	</ul>
 </footer>
