--- a/header.html
+++ b/header.html
@@ -1,24 +1,12 @@
-<!-- <header>
-    <nav style="background-color: #4CAF50; padding: 1rem; text-align: center;">
-        <div style="display: flex; margin-left:7%">
-            <h1 style="color: white; font-family: 'Arial', sans-serif;">LearnHub</h1>
-        </div>
-        <ul style="display: flex; list-style-type: none; margin: 0; padding: 0;">
-            <li style="display: inline; margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Home</a></li>
-            <li style="display: inline; margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Courses</a></li>
-            <li style="display: inline; margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">About Us</a></li>
-            <li style="display: inline; margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Contact</a></li>
-        </ul>
-    </nav>
-</header> -->
+<link rel="stylesheet" href="/header.css">
 <header>
-    <nav style="background-color: #4CAF50; padding: 1rem; display: flex; justify-content: space-between; align-items: center;">
-        <h1 style="color: white; font-family: 'Arial', sans-serif; margin: 0;">LearnHub</h1>
-        <ul style="list-style-type: none; margin: 0; padding: 0; display: flex;">
-            <li style="margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Home</a></li>
-            <li style="margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Courses</a></li>
-            <li style="margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">About Us</a></li>
-            <li style="margin-right: 15px;"><a href="#" style="color: white; text-decoration: none;">Contact</a></li>
-        </ul>
-    </nav>
+	<nav>
+		<h1 class="product-name">LearnHub</h1>
+		<ul class="navigation">
+			<li class="navigation-item"><a href="#" class="navigation-text">Home</a></li>
+			<li class="navigation-item"><a href="#" class="navigation-text">Courses</a></li>
+			<li class="navigation-item"><a href="#" class="navigation-text">About Us</a></li>
+			<li class="navigation-item"><a href="#" class="navigation-text">Contact</a></li>
+		</ul>
+	</nav>
 </header>
