adding themes and post login header

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/footer.css">
 <footer>
 	<p>&copy; 2024 LearnHub. All rights reserved.</p>
 	<ul class="policy-container">
